<resources>
    <string name="app_name">Minhas Notas</string>
    <string name="action_settings">Settings</string>

    <string name="nova_materia">Nova Materia</string>
    <string name="ver_materias">Ver Materias</string>
    <string name="nova_falta">Nova Falta</string>
    <string name="faltas">Faltas</string>
    <string name="disciplina">Disciplina</string>
    <string name="semestre">Semestre</string>
    <string name="professor">Professor</string>
    <string name="carga_hr">Carga Horaria</string>
    <string name="materias">Materias</string>
    <string name="notas">Notas</string>
    <string name="ver_notas">Ver Notas</string>

    <string name="qt">Nota Qt.</string>
    <string name="ql">Nota Ql.</string>
    <string name="med">Media</string>
    <string name="medf">Media Final</string>

    <string name="campoVazio">O campo não pode estar vazio!</string>

    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>

    <string name="registro_salvo">Salvo</string>
    <string name="erro_salvar">Erro ao salvar</string>
    <string name="reprovado">Reprovado por falta</string>

    <string name="confirmacao_exclusao">Deseja excluir o item selecionado?</string>
    <string name="opcoes">Opções</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirma">Confirma</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
</resources>
