<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nova_falta"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <CheckBox
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:id="@+id/um"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/um"/>

    <CheckBox
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:id="@+id/dois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dois"/>

    <CheckBox
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:id="@+id/tres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tres"/>

    <CheckBox
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:id="@+id/quatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quatro"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:layout_marginTop="40dp">
            <Button
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:background="@color/buttonCancel"/>

            <Button
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/confirma"
                android:background="@color/buttonConfirm"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
